package Strategy;

/**
 * @ProjectName: software_Design_Pattern_Experiment
 * @Package: Strategy
 * @ClassName: SorterStrategy
 * @author: sun
 * @Description: 用户选择接口
 * @Date: 2021/4/22 14:41
 * @Version: 1.0
 */
public interface SorterStrategy {
    public void sort();
}
